<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:tabSelectedTextColor="@color/black"
        app:tabBackground="@drawable/inset_tab_drawable"
        app:tabTextAppearance="@style/TabTheme.Text"
        app:tabIndicator="@null"
        app:tabIndicatorHeight="0dp"
        app:tabTextColor="@color/light_purple"
        style="@style/TabTheme">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_service"

            />

         <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planned_service"
             />

         <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_service"/>


    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/tab_frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout" />



</RelativeLayout>