<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20pt"
    android:background="@drawable/cardbg_small"
    android:paddingHorizontal="25dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/signUpTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="5pt"
            android:fontFamily="@font/avenir_light"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/grey"
            android:textSize="@dimen/loginTxtHeaderSize" />


    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/signUpTextLayout"
        android:hint="@string/first_name"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#101250"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/grey">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:fontFamily="@font/avenir_light"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/firstNameLayout"
        android:hint="@string/last_name"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#101250"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:fontFamily="@font/avenir_light"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/lastNameLayout"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#101250"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:fontFamily="@font/avenir_light"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/emailTextLayout"
        android:hint="@string/phone"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#101250"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_smartphone"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:textColor="@color/white"
            android:fontFamily="@font/avenir_light"
            android:inputType="phone"
            android:maxLength="10"
            android:digits="0123456789"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/getOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneTextLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenir_oblique"
        android:text="@string/get_otp"
        android:textColor="@color/white"
        android:textSize="@dimen/getOTPSize" />

    <LinearLayout
        android:id="@+id/enterOTPLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getOTP"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:id="@+id/resendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/avenir_oblique"
            android:text="@string/resend_otp"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:textSize="@dimen/getOTPSize" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="OTP"
            android:textColorHint="@color/grey"
            app:boxBackgroundColor="#101250"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_smartphone"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textColor="@color/white"
                android:fontFamily="@font/avenir_light"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/enterOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/avenir_oblique"
            android:text="@string/enter"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/getOTPSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterOTPLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_light"
            android:text="@string/already_have_an_account"
            android:textColor="@color/light_blue"
            android:textSize="11sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_light"
                android:text="@string/signin"
                android:textColor="@color/pink"
                android:textSize="@dimen/getOTPSize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_blue" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>