<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progress_ride_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/RL_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/riding_black_bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:clickable="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_back"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:id="@+id/ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_battery_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:text="@string/ride_statistics"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:background="#2ED981" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ride"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="20pt"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/battery_level"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="1400km"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10pt"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/total_ride_time"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="983 days"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RL_main">

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:text="GRAPH PLOT" />-->
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/map_1"
    android:background="@color/riding_black_bg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/graph"
        android:orientation="vertical">

        <!--        <androidx.core.widget.NestedScrollView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_distance"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20pt"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="771Km"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/TV_range_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/distance"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

<!--                    <ImageView-->
<!--                       -->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="10pt"-->
<!--                        android:clickable="true"-->
<!--                        android:backgroundTint="@android:color/transparent"-->
<!--                        android:src="@drawable/back_icon"-->
<!--                        tools:targetApi="lollipop" />-->
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dist_tv"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_riding"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20pt"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="50Hr 23min"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/TV_battery_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/riding_time"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/ride_statistics"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_speed"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20pt"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="43kmph"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/TV_ride_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/avg_speed"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <!--        </androidx.core.widget.NestedScrollView>-->
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3pt"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/hk_grotesk_regular"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:shadowColor="@android:color/transparent"
            android:text="@string/day"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:targetApi="p" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3pt"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/hk_grotesk_regular"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:shadowColor="@android:color/transparent"
            android:text="@string/week"
            android:textAllCaps="false"
            android:textColor="@color/light_green"
            android:textSize="15sp"
            tools:targetApi="p" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3pt"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/hk_grotesk_regular"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:shadowColor="@android:color/transparent"
            android:text="@string/month"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:targetApi="p" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3pt"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/hk_grotesk_regular"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:shadowColor="@android:color/transparent"
            android:text="@string/year"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:targetApi="p" />
    </LinearLayout>

</RelativeLayout>